--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,26 @@
   --scheme: light dark;
   color-scheme: var(--scheme);
 }
+
+body {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+
+}
+
+main {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.app-title {
+  background-image: linear-gradient(110deg, rgba(8, 76, 221, .7), rgba(33, 102, 252, .7), rgb(51, 142, 196));
+  color: transparent;
+  background-clip: text;
+}
