Add theme selection

--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,17 @@ main {
   color: transparent;
   background-clip: text;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #333;
+    color: white;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    background: #ddd;
+    color: black;
+  }
+}
